# deltacamera

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst  references.bib
docs/_templates/autoapi/python/: class.rst  function.rst  method.rst  module.rst
docs/explanation/: distortion-rotation.rst  distortion-validity.rst  index.rst  reprojection.rst  sympy-codegen.rst
src/cameravision/: cameravision.py  coordframes.py  maps_impl.py  points_impl.py  precompile.py  reprojection.py  validity.py
src/deltacamera/: __init__.py  _version.py  coordframes.py  core.py  decorators.py  distortion.py  distortion_models.py  intrinsics.py  largest_interior_rectangle.py  maps.py  maps_impl.py  points_impl.py  precompile.py  reprojection.py  util.py  validity.py
src/deltacamera/pt/: __init__.py  camera.py  camera_utils.py  coordframes.py  distortion.py  maps.py  reprojection.py  validity.py
src/lensform/: __init__.py  _version.py  core.py  distortion.py  maps.py  maps_impl.py  points_impl.py  precompile.py  reprojection.py  validity.py
tests/: conftest.py  test_autodiff_validation.py  test_camera.py  test_coverage_gaps.py  test_distortion.py  test_jacobian.py  test_param14_distortion.py  test_pt.py  test_reproject_image.py  test_reprojection.py  test_rotate_image.py  test_rotate_image_14param.py  test_validity.py  test_vanishing_point.py
tests/data/: dna_rendering_calibrations.npz  egohumans_fisheye_calibrations.npz  extract_calibrations.py  jrdb_calibrations.npz
