[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deltacamera"
dynamic = ["version"]
description = "Manipulate camera calibration parameters and warp images for computer vision tasks."
authors = [
    { name = "István Sárándi", email = "istvan.sarandi@uni-tuebingen.de" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

keywords = [
    "camera",
    "calibration",
    "computer-vision",
    "image-warping",
    "distortion",
    "lens-distortion",
    "reprojection",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "opencv-python",
    "numpy",
    "scipy",
    "numba",
    "shapely",
    "msgpack-numpy",
    "boxlib",
    "rlemasklib",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
lint = [
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "sphinxcontrib-bibtex",
    "sphinx-markdown-builder",
    "setuptools-scm",
    "toml",
]
gui = [
    "PyQt6>=6.5.0",
]
dev = [
    "deltacamera[test,lint,docs]",
]

[project.urls]
Homepage = "https://github.com/isarandi/deltacamera"
Repository = "https://github.com/isarandi/deltacamera"
Documentation = "https://deltacamera.readthedocs.io/"
Issues = "https://github.com/isarandi/deltacamera/issues"
Changelog = "https://github.com/isarandi/deltacamera/releases"
Author = "https://istvansarandi.com"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
version_file = "src/deltacamera/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"